syntax = "proto3";
package pstake.ratesync.v1beta1;

import "cosmos/msg/v1/msg.proto";
import "cosmos/base/v1beta1/coin.proto";
import "amino/amino.proto";
import "cosmos_proto/cosmos.proto";
import "pstake/ratesync/v1beta1/params.proto";
import "pstake/ratesync/v1beta1/ratesync.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/persistenceOne/pstake-native/v2/x/ratesync/types";

// Msg defines the Msg service.
service Msg {
  rpc CreateHostChain(MsgCreateHostChain) returns (MsgCreateHostChainResponse);
  rpc UpdateHostChain(MsgUpdateHostChain) returns (MsgUpdateHostChainResponse);
  rpc DeleteHostChain(MsgDeleteHostChain) returns (MsgDeleteHostChainResponse);
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);
}

message MsgCreateHostChain {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "pstake/ratesync/MsgCreateHostChain";

  string authority = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  HostChain host_chain = 2
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];
}

message MsgCreateHostChainResponse { uint64 i_d = 1; }

message MsgUpdateHostChain {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "pstake/ratesync/MsgUpdateHostChain";

  string authority = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  HostChain host_chain = 2
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];
}

message MsgUpdateHostChainResponse {}

message MsgDeleteHostChain {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "pstake/ratesync/MsgDeleteHostChain";

  string authority = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  uint64 i_d = 2;
}

message MsgDeleteHostChainResponse {}

message MsgUpdateParams {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "pstake/ratesync/MsgUpdateParams";

  string authority = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  Params params = 2
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];
}

message MsgUpdateParamsResponse {}